overflow for login page fixed

--- a/css/signupStyle.css
+++ b/css/signupStyle.css
@@ -4,6 +4,7 @@ body {
   height: 100vh;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
 }
 
 * {
